--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-frontend",
+  "name": "calories-app",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "chart.js": "^3.8.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
@@ -24,6 +25,7 @@
     "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "react-chartjs-2": "^4.1.0",
     "sass": "^1.52.1",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.9"
