--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@elements/*": ["src/shared/elements/*"],
       "@components/*": ["src/shared/components/*"],
+      "@utils/*": ["src/shared/utils/*"],
       "@pages/*": ["src/pages/*"]
     }
   }
