--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "extends": [
     "plugin:react/recommended",
     "standard",
+    "prettier",
     "plugin:prettier/recommended",
     "plugin:import/errors",
     "plugin:import/warnings"
