--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "react-chartjs-2": "^4.1.0",
     "sass": "^1.52.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.9"
   }
