--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,21 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@elements/*": ["src/shared/elements/*"],
-      "@components/*": ["src/shared/components/*"],
-      "@utils/*": ["src/shared/utils/*"],
-      "@pages/*": ["src/pages/*"]
+      "@elements/*": [
+        "src/shared/elements/*"
+      ],
+      "@components/*": [
+        "src/shared/components/*"
+      ],
+      "@utils/*": [
+        "src/shared/utils/*"
+      ],
+      "@hooks/*": [
+        "./src/shared/hooks/*"
+      ],
+      "@pages/*": [
+        "src/pages/*"
+      ]
     }
   }
 }
