--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@pages/*": [
         "src/pages/*"
+      ],
+      "@services/*": [
+        "./src/shared/services/*"
       ]
     }
   }
